<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HomeLibrary</string>
    <string name="leave">请假</string>
    <string name="course_title">课表</string>
    <string name="sick_leave">病假</string>
    <string name="casual_leave">事假</string>
    <string name="ok_btn">确认</string>
    <string name="attence">考勤</string>
    <string name="select_time">选择时间</string>
    <string name="classes_progress">教学进度：</string>
    <string name="classes">班级</string>
    <string name="course">课程</string>
    <string name="course_progress">完成度</string>

    <string name="course_reading">在读课程</string>
    <string name="course_has_read">已读课程</string>
    <string name="course_read_plan">计划课程</string>
    <string name="output">作品</string>
    <string name="share">分享</string>
    <string name="remark">评论</string>
    <string name="write_remark">写评论...</string>
    <string name="empty_remark">请填写评论内容...</string>
    <string name="support">点赞</string>
    <string name="chageHead">更换头像</string>
    <string name="name">昵称</string>

    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birth">出生日期</string>
    <string name="sex">性别</string>

    <string name="setting_Personal">个人资料</string>
    <string name="setting_BindFile">档案绑定</string>
    <string name="setting_BindAccount">账号绑定</string>
    <string name="setting_EditPasswrod">密码修改</string>
    <string name="setting_AboutUs">关于我们</string>



    <string name="feed_back">意见反馈</string>
    <string name="commit_feedback">提交反馈</string>
    <string name="phoneTitle">手机号</string>
    <string name="hintphoneTitle">未知</string>
    <string name="oldPassTitle">旧密码</string>
    <string name="oldPassTitle_hint">请填写旧密码</string>
    <string name="newPassTitle">新密码</string>
    <string name="newPassTitle_hint">请输入新密码</string>
    <string name="confirmTitle">确认密码</string>
    <string name="confirmTitle_hint">请再次输入新密码</string>
    <string name="pass_tip">密码必须至少8个字符，而且同时包含字母和数字</string>
    <string name="forget_pass">忘记密码</string>
    <string name="bind_account">账号绑定</string>
    <string name="bind">已绑定</string>
    <string name="unbind">绑定</string>
    <string name="cancel_bind">取消绑定</string>

    <string name="bind_student">档案绑定</string>
    <string name="bind_other">绑定其他机构</string>
    <string name="bind_phone_title">绑定手机</string>
    <string name="edit_phone">请填写您的手机号码</string>
    <string name="accept_check_sms">获取验证码</string>
    <string name="confirm_sure">确定</string>
    <string name="unbind_yet">未绑定</string>
    <string name="bind_tip">确定取消与%1$s的绑定?</string>
    <string name="accessment">课评</string>
    <string name="addFile">添加</string>
    <string name="password">密码:</string>
    <string name="username">账号:</string>
    <string name="organ">机构名:</string>
    <string name="organ_hint">请填写机构名称</string>
    <string name="username_hint">请填写账号</string>
    <string name="password_hint">请填写密码</string>
    <string name="bind_add">添加绑定</string>
    <string name="bind_error">信息填写有误,请重新绑定</string>
    <string name="bind_success">绑定成功</string>
    <string name="wallet">我的钱包</string>
    <string name="order">我的订单</string>
    <string name="class_review">课评</string>
    <string name="remark_title">老师对我的点评</string>
    <string name="notify">通知</string>
    <string name="sAttenceDateFormat">"student_attendances?int_day=[Between,%1$s,%2$s]"</string>
    <string name="historyMessFormat">"im_chats?create_time=[lt,%1$s]"</string>
    <string name="newMessFormat">"im_chats?create_time=[gt,%1$s]"</string>
    <string name="course_formate" >%1$s</string>
    <string name="sectionFormat" >%1$d</string>
    <string name="month_format">%1$d月</string>
    <string name="total_money">总资产(CNY)</string>
    <string name="bussinessType1">结账</string>
    <string name="bussinessType2">退费</string>
    <string name="bussinessType3">充值</string>
    <string name="bussinessType4">下单</string>
    <string name="bussinessType5">订单续费</string>
    <string name="bussinessType10">导入</string>
    <string name="bussinessType11">用户手动增加</string>
    <string name="bussinessType12">手动减少</string>
    <string name="un_pay">未付款</string>
    <string name="part_pay">部分付款</string>
    <string name="success_pay">交易成功</string>
    <string name="success_regsist">注册成功</string>
    <string name="order_end_title">共计金额:</string>
    <string name="origin_price">商品原价</string>
    <string name="price">商品折后价</string>
    <string name="discount_amount">折扣金额</string>
    <string name="reduced_amount">直减金额</string>
    <string name="present_times">赠送课时</string>
    <string name="order_success">交易成功!</string>
    <string name="order_no_format">订单编号: %1$s</string>
    <string name="join_time_format">报名日期: %1$s</string>
    <string name="order_time_format">下单时间: %1$s</string>

    <string name="course_time_formate">共%1$课时</string>
    <string name="useful_date_formate">有效期至: %1$s</string>
    <string name="money_formate">¥ %1$s</string>
    <string name="takePhoto">拍照</string>
    <string name="openPhotos">打开相册</string>
    <string name="preview">预习</string>
    <string name="preview_content">备课内容</string>
    <string name="preview_file">备课附件</string>
    <string name="preview_detail">查看详情</string>

    <string name="preview_time_format">上课时间: %1$s</string>
    <string name="preview_class_format">备课班级: %1$s</string>
    <string name="preview_teacher_format">备课老师: %1$s</string>
    <string name="preview_desc_format">课程简介: %1$s</string>
    <string name="unknown">未知</string>
    <string name="progress">%1$s %</string>
    <string name="attach_file">附件</string>
    <string name="record">语音</string>
    <string name="doc">文档</string>
    <string name="order_detail">订单详情</string>
    <string name="empty_phone">请填写手机号</string>
    <string name="empty_sms">请填写验证码</string>
    <string name="second_format">%d秒</string>
    <string name="finish">完成</string>

    <string name="password_unsame">2次密码不一致</string>
    <string name="bind_phone_first">请先绑定手机号码</string>
    <string name="verify_hint">请输入验证码</string>
    <string name="open_file_fail">不支持此类型文件</string>
    <string name="leave_dec_time">当前请假需要正常扣除课时</string>
    <string name="remark_commit">发送</string>
    <string name="content_detail">内容详情</string>
    <string name="homework">作业</string>
    <string name="classtitle">班</string>
    <string name="unfinish">去完成</string>
    <string name="finished">已上传</string>
    <string name="net_error">网络请求失败</string>
    <string name="success_setpass">密码修改成功</string>

    <string name="bind_phone">手机号</string>
    <string name="bind_weibo">微博</string>
    <string name="bind_qq">QQ</string>
    <string name="bind_weixin">微信</string>
    <string name="upload_error">上传失败</string>
    <string name="upload_success">上传成功</string>

    <string name="publish_time_format">发布时间: %1$s</string>
    <string name="deadline_time_format">截止时间: %1$s</string>
    <string name="homeworktitle">作</string>
    <string name="title_homework_detail">作业详情</string>
    <string name="edit_commit">请按照老师的要求完成作业</string>
    <string name="communicate">沟通</string>
    <string name="null_url">地址不能为空</string>
    <string name="upload">上传</string>
    <string name="empty_homework">请输入作业内容</string>
    <string name="reply">回复</string>
    <string name="size_error">文件大小不能0</string>
    <string name="mess_error">发送失败</string>
    <string name="live_zhibo">直播</string>
    <string name="live_in_room">进入</string>
</resources>
