<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar_btt"/>

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--<androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="@dimen/edit_pass_item_Left"
                android:paddingRight="@dimen/edit_pass_item_Left"
                style="@style/match_wrap"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/phoneTitle"
                    android:text="@string/phoneTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/edit_pass_item_title"
                    />
                <TextView
                    android:id="@+id/user_name"
                    style="@style/edit_pass_item_title"
                    android:text="@string/hintphoneTitle"
                    app:layout_constraintHorizontal_bias="0.320"
                    app:layout_constraintLeft_toLeftOf="@id/phoneTitle"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@id/phoneTitle"
                    />

                <View
                    style="@style/line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>-->

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="@dimen/edit_pass_item_Left"
                android:paddingRight="@dimen/edit_pass_item_Left"
                style="@style/match_wrap"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/oldPassTitle"
                    android:text="@string/oldPassTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/edit_pass_item_title"
                    />
                <EditText
                    android:id="@+id/user_oldpass"
                    style="@style/phoneTitle_edit"
                    android:hint="@string/oldPassTitle_hint"
                    android:background="@null"
                    app:layout_constraintHorizontal_bias="0.320"
                    app:layout_constraintLeft_toLeftOf="@id/oldPassTitle"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@id/oldPassTitle"
                    />

                <View
                    style="@style/line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="@dimen/edit_pass_item_Left"
                android:paddingRight="@dimen/edit_pass_item_Left"
                style="@style/match_wrap"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/newPassTitle"
                    android:text="@string/newPassTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/edit_pass_item_title"
                    />
                <EditText
                    android:id="@+id/user_newpass"
                    android:background="@null"
                    android:hint="@string/newPassTitle_hint"
                    app:layout_constraintHorizontal_bias="0.320"
                    app:layout_constraintLeft_toLeftOf="@id/newPassTitle"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@id/newPassTitle"
                    style="@style/phoneTitle_edit" />

                <View
                    style="@style/line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingTop="14dp"
                android:paddingBottom="14dp"
                android:paddingLeft="@dimen/edit_pass_item_Left"
                android:paddingRight="@dimen/edit_pass_item_Left"
                style="@style/match_wrap"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/confirmTitle"
                    android:text="@string/confirmTitle"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    style="@style/edit_pass_item_title"
                    />
                <EditText
                    android:id="@+id/user_confirm_newpass"
                    android:background="@null"
                    android:hint="@string/confirmTitle_hint"
                    app:layout_constraintHorizontal_bias="0.340"
                    app:layout_constraintLeft_toLeftOf="@id/confirmTitle"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBaseline_toBaselineOf="@id/confirmTitle"
                    style="@style/phoneTitle_edit" />

                <View
                    style="@style/line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_marginTop="@dimen/output_detail_inside_text_marginLeft"
                android:layout_marginLeft="@dimen/edit_pass_item_Left"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/pass_rule_tip"
                    android:textSize="@dimen/pass_rule_tip"
                    android:textColor="@color/pass_rule_tip"
                    android:text="@string/pass_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/forget_pass"
                    android:textColor="@color/forget_pass"
                    android:padding="@dimen/back_padding"
                    android:textSize="@dimen/pass_rule_tip"
                    android:layout_marginTop="10dp"
                    android:text="@string/forget_pass"
                    android:gravity="left"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>