<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:textSize="@dimen/bind_account_title_dialog"
        android:textColor="@color/bind_account_title_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/dialog_title_marginTop"
        android:layout_margin="20dp"
        android:text="@string/leave" />

    <ImageView
        android:id="@+id/close"
        android:src="@mipmap/close"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintLeft_toRightOf="@+id/title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/line1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        android:layout_marginTop="@dimen/list_margin"
        style="@style/line"/>

    <TextView
        android:id="@+id/teacher"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_marginTop="@dimen/list_margin"
        android:text="@string/edit_phone"
        android:textColor="@color/edit_phone"
        android:textSize="@dimen/edit_phone"
        app:layout_constraintHorizontal_bias="0.10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <TextView
        android:id="@+id/time"
        android:text="@string/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/teacher"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.10"
        android:layout_marginTop="@dimen/list_margin"
        android:textSize="@dimen/edit_phone"
        android:textColor="@color/edit_phone"/>

    <View
        android:id="@+id/line2"
        app:layout_constraintTop_toBottomOf="@+id/time"
        android:layout_marginTop="@dimen/dialog_title_marginTop"
        app:layout_constraintLeft_toLeftOf="@id/img_phone"
        app:layout_constraintRight_toRightOf="@id/edit_phone"
        style="@style/line"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/leave_list"
        android:layout_marginTop="@dimen/list_margin"
        app:layout_constraintTop_toBottomOf="@id/line2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.85"
        android:layout_height="@dimen/leave_list_height">

    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/line3"
        app:layout_constraintTop_toBottomOf="@+id/leave_list"
        android:layout_marginTop="@dimen/dialog_title_marginTop"
        app:layout_constraintLeft_toLeftOf="@id/img_sms"
        app:layout_constraintRight_toRightOf="@id/edit_phone"
        style="@style/line"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/confirm_sure"
        android:textColor="@color/white"
        android:enabled="false"
        android:background="@drawable/btn_confirm_bg_unable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line3"
        app:layout_constraintHeight_percent="0.14"
        android:gravity="center"
        android:layout_margin="@dimen/confirm_btn_dilog_margin"
        app:layout_constraintWidth_percent="0.8"/>

    <CheckBox
        android:padding="@dimen/back_padding"
        android:id="@+id/check"
        style="@style/checkbox_right"
        android:checked="false"
        android:text="@string/leave_dec_time"
        android:textSize="@dimen/edit_phone"
        android:textColor="@color/edit_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/confirm_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/list_margin"
        android:layout_marginBottom="@dimen/list_margin"
        />
</androidx.constraintlayout.widget.ConstraintLayout>